--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
     function showResult(message) {
       const resultDiv = document.getElementById('result');
-      resultDiv.textContent = message;
+      resultDiv.innerHTML = message;
       resultDiv.classList.remove('hidden');
       document.getElementById('error').classList.add('hidden');
     }
